changed .mjs to js

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -25,6 +25,7 @@
           ],
           "defaultAuthentication": {
             "apiKeyConfig": {
+              "apiKeyExpirationDate": "2024-02-03T02:27:08.183Z",
               "apiKeyExpirationDays": 30,
               "description": "api key description"
             },
