--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "dependencies": {
-        "aws-amplify": "^6.0.10",
-        "@aws-amplify/api": "6.0.10"
+        "@aws-amplify/api": "6.0.10",
+        "aws-amplify": "^6.0.10"
     }
 }
